<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_action_profile"
        />
    <item
        android:id="@+id/fertilizerCalculator"
        android:title="@string/fertilizer_calculator"
        android:icon="@drawable/ic_action_calculator"
        />
    <item
        android:id="@+id/howToUse"
        android:title="@string/how_to_use"
        android:icon="@drawable/ic_action_use"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/setting"
        android:icon="@drawable/ic_action_setting"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_action_logout"
        />
</menu>